antsle/hardway/files/envoy/static/envoy.yaml
admin:
  access_log_path: "/var/log/envoy-admin-access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001

static_resources:
  listeners:
    - name: k8s_master_0
      address: 
        socket_address: 
          address: 0.0.0.0
          port_value: 6443
      filter_chains:
      - filters:
        - name: envoy.http_connection_manager
          config:
            stat_prefix: ingress_http
            access_log:
            - name: envoy.file_access_log
              config:
                path: "/var/log/envoy-listener-access.log"
            route_config:
              virtual_hosts:
              - name: local_route
                domains:
                  - "*"
                routes:
                  - match:
                      prefix: "/"
                    route:
                      cluster: k8s-master

            http_filters:
            - name: envoy.router
              config: {}

        tls_context:
          common_tls_context:
            tls_certificates:
              - certificate_chain:
                  filename: "/var/lib/envoy/certs/kube-apiserver.pem"
                private_key:
                  filename: "/var/lib/envoy/certs/kube-apiserver-key.pem"

  clusters:
  - name: k8s-master
    connect_timeout: 0.25s
    type: static
    lb_policy: random
    tls_context:
      common_tls_context:
        tls_certificates:
          - certificate_chain:
              filename: "/var/lib/envoy/certs/admin.pem"
            private_key:
              filename: "/var/lib/envoy/certs/admin-key.pem"
    hosts:
      - socket_address:
          address: 10.10.1.10
          port_value: 6443
      - socket_address:
          address: 10.10.1.11
          port_value: 6443
      - socket_address:
          address: 10.10.1.12
          port_value: 6443
